# anya-web

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sql_config.sql  test.py
site_app/: app.py  db_handler.py  discord_rest.py  html_creator.py
static/: guild_temp.html  home.html  home_style.css  manage.html  profile.css  profile.html
