[tool.poetry]
name = "anya-web"
version = "0.1.0"
description = "website for sarthhh/anya"
authors = ["sarthhh <shiva02939@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "anya_web"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.89.0"
hikari = "^2.0.0.dev115"
asyncpg = "^0.27.0"
aiofiles = "^22.1.0"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
dominate = "^2.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pyright = "^1.1.287"
ruff = "^0.0.214"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
